--- a/blogs/tech/2022/092101.md
+++ b/blogs/tech/2022/092101.md
@@ -1,10 +1,8 @@
 ---
-title: second page in category1
+title: webpack多应用打包通用方案
 date: 2019-09-21
 tags:
  - webpack
 categories:
  - 技术文章
 ---
-
-second page in category1
