--- a/blogs/live/2022/092101.md
+++ b/blogs/live/2022/092101.md
@@ -1,10 +1,10 @@
 ---
-title: second page in category2
+title: 无意义的生活碎片
 date: 2017-09-21
 tags:
- - tag4
+ - 生活碎片
 categories: 
- - category2
+ - 生活随笔
 ---
 
 second page in category2
