fix the pic path

--- a/blogs/tech/2021/121501.md
+++ b/blogs/tech/2021/121501.md
@@ -116,7 +116,7 @@ console.log(a); // Uncaught SyntaxError: Identifier 'a' has already been declare
 
 预编译时候的LHS（Left Hand Side）并不关心当前a的值是什么，只是想要为 =1 和 = 2 这两个赋值操作找到一个目标。就好像《让子弹飞》一样
 
-![image.png](/public/bVcYc3i) 
+![image.png](/xianzhang.jpg) 
 
 当然了，let这种更符合一般编程习惯的做法更值得提倡。
 
